# InternalEngine

./: .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  README.md  csharp.cs  imgui.ini  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.0.10.json  mono_crash.0.11.json  mono_crash.0.12.json  mono_crash.0.13.json  mono_crash.0.2.json  mono_crash.0.3.json  mono_crash.0.4.json  mono_crash.0.5.json  mono_crash.0.6.json  mono_crash.0.7.json  mono_crash.0.8.json  mono_crash.0.9.json  premake5.lua
Internal/: imgui.ini  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.0.10.json  mono_crash.0.11.json  mono_crash.0.12.json  mono_crash.0.2.json  mono_crash.0.3.json  mono_crash.0.4.json  mono_crash.0.5.json  mono_crash.0.6.json  mono_crash.0.7.json  mono_crash.0.8.json  mono_crash.0.9.json
Internal/assets/shaders/vertex/: vertex.spv  vertex.vert
Internal/libs/discord/: premake5.lua
Internal/libs/discord/cpp/: achievement_manager.h  activity_manager.h  application_manager.h  core.h  event.h  image_manager.h  lobby_manager.h  network_manager.h
Internal/libs/discord/csharp/: Core.cs
Internal/libs/glad/: CMakeLists.txt  cmake_install.cmake  premake5.lua
Internal/libs/glad/include/glad/: glad.h  glad_glx.h  glad_wgl.h
Internal/libs/glad/src/: glad.c  glad_glx.c  glad_wgl.c
Internal/libs/imgui/: imgui.h
Internal/libs/vulkan/Linux/: README.txt  vulkansdk
Internal/libs/vulkan/Linux/samples/: CMakeCache.txt  cmake_install.cmake
Internal/libs/vulkan/Linux/samples/API-Samples/: cmake_install.cmake
Internal/libs/vulkan/Linux/source/layer_factory/: CMakeLists.txt  layer_factory_linux.json
Internal/src/Internal/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Keycodes.h  Layer.cpp  Layer.h  Logger.cpp  Logger.h  Maths.h  Module.h  Script.cpp  Script.h  Window.cpp  Window.h
Internal/src/Internal/Events/: Event.h  EventHandler.cpp  EventHandler.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
Internal/src/Internal/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Internal/src/Internal/Linux/: LinuxVSurface.cpp  LinuxVSurface.h  LinuxWindow.cpp  LinuxWindow.h
Internal/src/Internal/MacOS/: MacOSWindow.h  MacOSWindow.mm
Internal/src/Internal/Maths/Vector/: Vector.h  Vector2.h  Vector3.h  Vector4.h
Internal/src/Internal/Memory/: Allocators.cpp  Allocators.h
Internal/src/Internal/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  Renderer.cpp  Renderer.h  RendererAPI.h  Shader.h  VertexArray.h
Internal/src/Internal/Rendering/: RenderingAPI.h
Internal/src/Internal/Types/: Pointer.cpp  Pointer.h  Pointer.hpp  Pointers.cpp  Pointers.h
Internal/src/Internal/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImGui.cpp  VulkanImGui.h  VulkanImGuiRenderer.cpp  VulkanShader.cpp  VulkanShader.h
Internal/src/Internal/Windows/: WindowsVSurface.cpp  WindowsVSurface.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: mono_crash.0.0.json
Sandbox/src/: Sandbox.cpp  Sandbox.h
Scripts/: genCmake.sh  setup.sh
assets/shaders/fragment/: fragment.frag
assets/shaders/vertex/: vertex.vert
(+52 files in other folders)
